# django-history-example

./: .pre-commit-config.yaml  Makefile  README.md  manage.py  pyproject.toml
accounts/migrations/: 0001_initial.py
consult/: api.py  asgi.py  factories.py  settings.py  urls.py  wsgi.py
consult/accounts/: admin.py  apps.py
consult/accounts/migrations/: 0001_initial.py
consult/accounts/templates/: homepage.html
consult/accounts/templates/registration/: logged_out.html  login.html
consult/consultations/: admin.py  apps.py  forms.py  models.py  pipeline.py  views.py
consult/consultations/management/commands/: generate_dummy_data.py  generate_dummy_themes.py  generate_dummy_users_responses.py
consult/consultations/migrations/: 0001_initial.py  0002_framework.py  0003_remove_framework_execution.py  0004_frameworktheme_delete_framework.py  0005_response.py  0006_historicalresponsemapping_responsemapping.py  0007_alter_frameworktheme_user.py
consult/consultations/templates/: create_theme.html  edit_framework_themes.html  edit_response_mapping.html  edit_theme.html  homepage.html  list_themes.html  run_generate_framework.html  run_generate_mapping.html  show_all_frameworks.html  show_all_response_mappings.html  show_framework.html  show_framework_theme.html  show_response_mapping.html
consultations/: admin.py
consultations/migrations/: 0001_initial.py
